--- a/style.css
+++ b/style.css
@@ -1,3 +1,31 @@
+body {
+    background-color:mintcream;
+    font-family: 'Quicksand', sans-serif;
+}
+
+header {
+    background-image: url(/bilder/header-background.jpg);
+    opacity: 85%;
+}
+
 h1 {
     font-size: 100px;
+    color:rgb(255, 255, 255);
+    display: flex;
+    justify-content: center;
+    opacity: 100%;
+}
+
+.links {
+    display: flex;
+    justify-content:space-evenly;
+    font-size: 20px;
+}
+
+a {
+    color: white;
+}
+
+.logo {
+    height: 40px;
 }
