--- a/LABB1-master, nyaste/style.css
+++ b/LABB1-master, nyaste/style.css
@@ -45,6 +45,19 @@ html, body {
     background-color: rgba(255, 255, 255, .3);
 }
 
+.nav a:active {
+    background-color: #E51B23;
+}
+
+p {
+    color: #000;
+}
+
+:not(p) {
+    color: #83483d;
+}
+
+
 header {
     background-color: rgba(0, 0, 0, .6);
     background-image: url(bilder/header-background.jpg);
